<resources>
    <string name="app_name">My Application</string>
    <string name="fake_instagram_profile_predictor">Fake Instagram Profile Predictor</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="prof_yes">YES</string>
    <string name="prof_no">NO</string>
    <string name="predictor">PREDICTOR</string>
    <string name="username">Username</string>
    <string name="fullname">Fullname</string>
    <string name="description">Description</string>
    <string name="external_url">External Url</string>
    <string name="external_yes">YES</string>
    <string name="external_no">NO</string>
    <string name="private_yes">YES</string>
    <string name="private1">Private</string>
    <string name="private_no">NO</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="predict">Predict</string>
    <string name="genuine_account">Genuine Account</string>
    <string name="fake_account">Fake Account</string>
    <string name="predict_another_account">Predict Another Account</string>
    <string name="todo">TODO</string>
    <string name="app_icon_description">App Icon</string>
</resources>
