<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d1c4e9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/fake_instagram_profile_predictor"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/profilePictureRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_picture"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <RadioButton
                android:id="@+id/profilePictureYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prof_yes"
                android:textColor="@android:color/black"
                style="@style/CustomRadioButton"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/profilePictureNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prof_no"
                android:textColor="@android:color/black"
                style="@style/CustomRadioButton"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        </RadioGroup>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="text"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp"
            android:textStyle="italic"
            style="@style/CustomEditText"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/Fullname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="text"
            android:hint="@string/fullname"
            android:inputType="text"
            android:minHeight="48dp"
            android:textStyle="italic"
            style="@style/CustomEditText"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:autofillHints="text"
            android:hint="@string/description"
            android:inputType="text"
            android:minHeight="48dp"
            android:textStyle="italic"
            style="@style/CustomEditText"
            tools:ignore="VisualLintTextFieldSize" />

        <RadioGroup
            android:id="@+id/ExternalUrlRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/external_url"
                android:textColor="@android:color/black"
                android:textSize="19sp" />

            <RadioButton
                android:id="@+id/ExternalUrlYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/external_yes"
                android:textColor="@android:color/black"
                style="@style/CustomRadioButton"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/ExternalUrlNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/external_no"
                android:textColor="@android:color/black"
                style="@style/CustomRadioButton"
                tools:ignore="TouchTargetSizeCheck" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/PrivateGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/private1"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/PrivateYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/private_yes"
                android:textColor="@android:color/black"
                style="@style/CustomRadioButton" />

            <RadioButton
                android:id="@+id/PrivateNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/private_no"
                android:textColor="@android:color/black"
                style="@style/CustomRadioButton" />

        </RadioGroup>

        <EditText
            android:id="@+id/Posts"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="number"
            android:hint="@string/posts"
            android:inputType="text"
            android:minHeight="48dp"
            android:textStyle="italic"
            style="@style/CustomEditText"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/Followers"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="number"
            android:hint="@string/followers"
            android:inputType="text"
            android:minHeight="48dp"
            android:textStyle="italic"
            style="@style/CustomEditText"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/Following"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="number"
            android:hint="@string/following"
            android:inputType="text"
            android:minHeight="48dp"
            android:textStyle="italic"
            style="@style/CustomEditText"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/predictButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@color/purple_200"
            android:text="@string/predict"
            android:textColor="#311B92" />

    </LinearLayout>
</ScrollView>
