<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d1c4e9"
    android:layout_gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginStart="10dp"
        android:text="@string/fake_instagram_profile_predictor"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/genuineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="@string/genuine_account"
        android:background="@drawable/rounded_green_button"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:visibility="gone"
         />

    <Button
        android:id="@+id/fakeButton"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_red_button"
        android:text="@string/fake_account"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:visibility="gone" />
    <TextView
        android:id="@+id/predictTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="24dp"
        android:text="@string/predict_another_account"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:padding="16dp"
        android:background="@color/purple_200"
        android:clickable="true"
        android:focusable="true" />

</FrameLayout>
